--- a/src/02-form.html
+++ b/src/02-form.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 3</h1>
+      <h1>Welcome to form</h1>
+
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input class="input" type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea class="input-text" name="message" rows="8"></textarea>
+        </label>
+        <button class="form-button" type="submit">Submit</button>
+      </form>
     </section>
+    <script type="module" src="./js/form.js"></script>
   </body>
 </html>
