--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       <h1>Lorem ipsum dolor sit amet.</h1>
       <!-- Path to images as from index.html file -->
       <img src="./img/javascript.svg" alt="" />
+      <h2>Title</h2>
     </section>
 
     <!-- Loads the specified .html file -->
