--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -14,6 +14,6 @@
 
       <ul class="gallery"></ul>
     </section>
-    <script type="module" src="./js/gallery.js"></script>
+    <script type="module" src="./js/01-gallery.js"></script>
   </body>
 </html>
