--- a/src/02-form.html
+++ b/src/02-form.html
@@ -24,6 +24,6 @@
         <button class="form-button" type="submit">Submit</button>
       </form>
     </section>
-    <script type="module" src="./js/form.js"></script>
+    <script type="module" src="./js/02-form.js"></script>
   </body>
 </html>
